# smtp-event-source

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go
cmd/: BUILD.bazel  root.go
internal/config/: BUILD.bazel  mapping.go  types.go
internal/event/: BUILD.bazel  webhook.go
internal/smtp/: BUILD.bazel  receivers.go  server.go
