load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "github.com/slintes/smtpServer/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/smtp:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
